# project_management_app

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci_workflow.yml
alembic/: env.py
alembic/versions/: 9a5610bfcf23_initial.py
app/: main.py
app/application/services/: __init__.py  auth_service.py  document_service.py  project_service.py  user_project_role_service.py
app/auth/: controller.py  model.py  service.py
app/core/: config.py  database.py  exceptions.py  logger.py  security.py
app/database/: base.py
app/domain/enities/: __init__.py  document.py  project.py  user.py  user_project_role.py
app/domain/exceptions/: document_exceptions.py  domain_exceptions.py  project_exceptions.py  user_exceptions.py  user_project_role_exceptions.py
app/domain/repositories/: document_repository.py  project_repository.py  user_project_role_repository.py  user_repository.py
app/domain/storage/: document_storage.py  utils.py
app/infrastructure/: __init__.py  sqlalchemy_documet_repository.py  sqlalchemy_project_repository.py  sqlalchemy_user_project_role_repository.py  sqlalchemy_user_repository.py
app/infrastructure/core/: config.py  database.py  exceptions.py  security.py
app/infrastructure/orm/: __init__.py  document_model.py  project_model.py  user_model.py  user_project_role_model.py
app/infrastructure/storage/: file_system_document_storage.py  s3_document_storage.py
app/presentation/: dependencies.py
app/presentation/api/: __init__.py
app/presentation/api/v1/: auth_routes.py  document_routes.py  project_routes.py
app/presentation/schemas/: auth_schemas.py  document_schemas.py  project_schemas.py
app/routers/: dependencies.py
app/routers/api/: __init__.py
app/routers/api/v1/: auth_routes.py  document_routes.py  project_routes.py
app/routers/schemas/: document_schemas.py  project_schemas.py
app/services/: __init__.py  auth_service.py  document_service.py  project_service.py  user_project_role_service.py
aws/: cloudformation_ec2_rds.yml
aws/lambda/: lambda_function.py
infra/: cloudformation_ec2_rds.yml  ecs-dockerhub.yml
scripts/: recreate_db.py
tests/: test_root.py
tests/auth/: test_auth_service.py
tests/infrastructure/: test_file_system_document_storage.py  test_s3_document_storage.py  test_sqlalchemy_user_repository.py
tests/project/: test_project_service.py
