[project]
name = "fastapi-poetry-crud"
version = "0.1.0"
description = ""
authors = [
    {name = "art0o",email = "12069431+v0z@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
bandit = "^1.8.6"
ruff = "^0.12.8"
mypy = "^1.17.1"
httpx = "^0.28.1"

