[project]
name = "fastapi-poetry-crud"
version = "0.1.0"
description = ""
authors = [
    {name = "art0o",email = "12069431+v0z@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "types-passlib (>=1.7.7.20250602,<2.0.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
bandit = "^1.8.6"
ruff = "^0.12.8"
mypy = "^1.17.1"
httpx = "^0.28.1"

[tool.poetry]
name = "fastapi-poetry-crud"
packages = [{ include = "app" }]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = true
docstring-code-format = true


[tool.ruff.lint]
# Select rule sets (common, safe, PEP8-focused)
select = [
    "E",    # pycodestyle errors (PEP 8)
    "F",    # pyflakes
    "B",    # flake8-bugbear (common pitfalls)
    "UP",   # pyupgrade (modernize syntax)
    "N",    # naming conventions
    "W",    # pycodestyle warnings
]
# Ignore rules that we don’t want too strictly enforced
ignore = [
    "E501",  # line length handled by formatter
    "D203",  # prefer no blank line before class (D211)
    "D212",  # prefer summary on its own line (D213)
    "D100",  # don’t require docstring for every module
    "D104",  # don’t require docstring for every package
    "B008",  # do not warn about function calls in default arguments
]
# Automatically fix what can be safely fixed
fixable = ["ALL"]
